<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fcfcfc"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/top_space"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="#0080ff"
                        android:textSize="40sp"
                        />

                    <TextView
                        android:id="@+id/tv_sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/fragment_me_sub_titile"
                        android:textColor="#ADADAD"
                        android:textSize="15sp"
                        />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/login_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/act_login_et_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:hint="@string/login_user_hint"
                    android:textColor="#323232"
                    android:textColorHint="@color/edittext_hint_color"
                    android:textSize="15sp"
                    />

                <LinearLayout
                    android:id="@+id/ll_edit_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:visibility="invisible">

                    <ImageButton
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_margin="5dp"
                        android:background="@mipmap/edittext_clear"
                        />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:background="#d0d0d0"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/act_login_et_password"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/log_pwe_hint"
                    android:inputType="textPassword"
                    android:textColor="#323232"
                    android:textColorHint="@color/edittext_hint_color"
                    android:textSize="15sp"
                    />

                <LinearLayout
                    android:visibility="invisible"
                    android:id="@+id/iv_eyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@mipmap/login_eyes"
                        />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:background="#d0d0d0"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal|right"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/act_login_tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pwd_forget"
                    android:textColor="@color/edittext_hint_color"
                    android:textSize="14sp"/>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="14dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#d0d0d0"
                    />

                <TextView
                    android:id="@+id/act_login_tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_register"
                    android:textColor="@color/edittext_hint_color"
                    android:textSize="14sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/act_login_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/bg_login_bt"
                    android:text="@string/login"
                    android:textColor="#0080ff"
                    android:textSize="18sp"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/handle_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <ImageView
                    android:background="#323232"
                    android:id="@+id/iv_photo"
                    android:layout_marginTop="30dp"
                    android:layout_width="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/iv_photo"
                    android:layout_width="wrap_content"
                    android:text="555555555"
                    android:textSize="15sp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>



            <LinearLayout
                android:id="@+id/item_order_handle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/order_handle"
                    android:textColor="#697d91"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="14dp"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/mine_arr_right"
                    />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:background="#d0d0d0"
                />
            <LinearLayout
                android:id="@+id/item_modify_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/modify_password"
                    android:textColor="#697d91"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="14dp"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/mine_arr_right"
                    />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:background="#d0d0d0"
                />
            <LinearLayout
                android:id="@+id/item_logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/logout"
                    android:textColor="#697d91"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="14dp"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/mine_arr_right"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:background="#d0d0d0"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>